--- a/src/GlobalStyles.scss
+++ b/src/GlobalStyles.scss
@@ -19,15 +19,20 @@
   --white: #ffffff;
 }
 
+:focus {
+  outline: transparent;
+  box-shadow: 0 0 0 2px var(--purple);
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+  line-height: 1.3;
+  font-weight: normal;
 }
 
 body {
   background-color: var(--background);
-  font-family: 'Roboto', sans-serif;
-  line-height: 1.3;
-  font-weight: normal;
 }
