--- a/src/pages/Coffees/Coffees.module.scss
+++ b/src/pages/Coffees/Coffees.module.scss
@@ -66,7 +66,7 @@
       border-radius: 4px;
       display: inline-flex;
       height: 2.375rem;
-      gap: 6px;
+      gap: 0.25rem;
       padding: 0.5rem;
 
       button {
@@ -76,7 +76,6 @@
         font-weight: 700;
         display: flex;
         align-items: center;
-        justify-content: center;
         cursor: pointer;
 
         &:hover {
@@ -88,9 +87,10 @@
         background-color: var(--base-button);
         color: var(--base-title);
         text-align: center;
+        line-height: 1;
 
         border: none;
-        width: 20px;
+        width: 1.25rem;
 
         &::-webkit-inner-spin-button {
           -webkit-appearance: none;
@@ -105,6 +105,13 @@
       padding: 0.5rem;
       display: flex;
       border-radius: 6px;
+      border: none;
+      cursor: pointer;
+      transition: all 0.15s;
+
+      &:hover {
+        background-color: var(--purple);
+      }
     }
   }
 }
