fix component Button

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -3,8 +3,7 @@
   color: var(--base-button);
   border-radius: 4px;
   display: inline-flex;
-  min-height: 2rem;
-  max-height: 2.375rem;
+  height: 100%;
   gap: 0.25rem;
   padding: 0.5rem;
 
