--- a/src/components/SelectedCoffees/SelectedCoffees.module.scss
+++ b/src/components/SelectedCoffees/SelectedCoffees.module.scss
@@ -4,13 +4,13 @@
   .coffeeInfo {
     display: flex;
     gap: 0.5rem;
-    max-height: 2rem;
+    height: 2rem;
 
     .removeBtn {
       display: flex;
       align-items: center;
       justify-content: center;
-      height: 2rem;
+      height: 100%;
       gap: 0.25rem;
       border: none;
       background-color: var(--base-button);
