--- a/src/pages/Checkout/Checkout.module.scss
+++ b/src/pages/Checkout/Checkout.module.scss
@@ -2,4 +2,54 @@
   display: flex;
   flex-direction: column;
   color: var(--base-title);
+
+  .sectionPurchase {
+    width: 28rem;
+    background-color: var(--base-card);
+    padding: 2.5rem;
+    border-radius: 6px 44px;
+
+    .priceInfo {
+      display: flex;
+      flex-direction: column;
+      gap: 0.75rem;
+      margin-bottom: 2rem;
+      font-size: 0.875rem;
+
+      div {
+        display: flex;
+        justify-content: space-between;
+
+        span {
+          font-weight: normal;
+        }
+      }
+
+      .priceTotal {
+        display: flex;
+        justify-content: space-between;
+        font-size: 1.25rem;
+
+        p {
+          font-weight: 700;
+        }
+      }
+    }
+    .purchaseConfirm {
+      width: 100%;
+      background-color: var(--yellow);
+      color: var(--white);
+      border: none;
+      border-radius: 6px;
+      padding: 0.75rem;
+      font-weight: 700;
+      line-height: 1.6;
+      cursor: pointer;
+      transition: all 0.15s;
+
+      &:hover {
+        background-color: var(--yellow-dark);
+      }
+    }
+  }
 }
