--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -32,8 +32,8 @@
         margin-top: 4.125rem;
         display: grid;
         grid-template-columns: 1fr auto;
-        row-gap: 20px;
-        column-gap: 40px;
+        row-gap: 1.25rem;
+        column-gap: 2.5rem;
 
         span {
           display: flex;
