--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -32,6 +32,27 @@
       border-radius: 6px;
       cursor: pointer;
       transition: color 0.15s;
+      position: relative;
+
+      .cartItens {
+        display: none;
+
+        &.filled {
+          background-color: var(--yellow-dark);
+          color: var(--white);
+          font-size: 0.75rem;
+          font-weight: 700;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 1.25rem;
+          height: 1.25rem;
+          border-radius: 100%;
+          position: absolute;
+          top: -20%;
+          right: -20%;
+        }
+      }
 
       &:hover {
         color: var(--yellow);
