--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   color: var(--base-title);
-  margin-top: 2rem;
 
   .header {
     display: flex;
@@ -90,7 +89,7 @@
 
     .coffeesContainer {
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
+      grid-template-columns: repeat(4, 1fr);
       row-gap: 2.5rem;
       column-gap: 2rem;
     }
