--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   color: var(--base-title);
+  width: 90vw;
 
   .header {
     display: flex;
@@ -92,6 +93,17 @@
       grid-template-columns: repeat(4, 1fr);
       row-gap: 2.5rem;
       column-gap: 2rem;
+      align-items: center;
+      justify-content: center;
+
+      @media (max-width: 1250px) {
+        grid-template-columns: repeat(3, 1fr);
+        align-items: center;
+      }
+
+      @media (max-width: 920px) {
+        grid-template-columns: repeat(2, 1fr);
+      }
     }
   }
 }
