--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -48,10 +48,6 @@
 
         @media (max-width: 425px) {
           grid-template-columns: repeat(1, 1fr);
-
-          span {
-            // justify-content: space-between;
-          }
         }
 
         span {
@@ -117,7 +113,8 @@
   }
 
   .main {
-    margin-top: 8.75rem;
+    margin: 8.75rem auto 0;
+    max-width: 70rem;
 
     .sectionTitle {
       font-family: 'Baloo 2';
