--- a/src/pages/Checkout/Checkout.module.scss
+++ b/src/pages/Checkout/Checkout.module.scss
@@ -160,6 +160,26 @@
             background-color: var(--yellow-dark);
           }
         }
+
+        &.loading {
+          position: relative;
+          &::after {
+            position: absolute;
+            content: 'Carregando...';
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 104%;
+            height: 104%;
+            top: -2%;
+            left: -2%;
+            background-color: rgba(0, 0, 0, 0.4);
+            color: white;
+            font-weight: 700;
+            font-size: 3rem;
+            border-radius: 6px;
+          }
+        }
       }
     }
 
