--- a/src/pages/Checkout/Checkout.module.scss
+++ b/src/pages/Checkout/Checkout.module.scss
@@ -280,20 +280,36 @@
         }
       }
 
-      .purchaseConfirm {
-        width: 100%;
-        background-color: var(--yellow);
-        color: var(--white);
-        border: none;
-        border-radius: 6px;
-        padding: 0.75rem;
-        font-weight: 700;
-        line-height: 1.6;
-        cursor: pointer;
-        transition: all 0.15s;
+      .groupPurchaseConfirmButton {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 0.5rem;
 
-        &:hover {
-          background-color: var(--yellow-dark);
+        span {
+          display: none;
+          transform: translateY(75%);
+
+          &.emptyInputs {
+            display: flex;
+            color: red;
+          }
+        }
+        .purchaseConfirm {
+          width: 100%;
+          background-color: var(--yellow);
+          color: var(--white);
+          border: none;
+          border-radius: 6px;
+          padding: 0.75rem;
+          font-weight: 700;
+          line-height: 1.6;
+          cursor: pointer;
+          transition: all 0.15s;
+
+          &:hover {
+            background-color: var(--yellow-dark);
+          }
         }
       }
     }
