--- a/src/pages/Checkout/Checkout.module.scss
+++ b/src/pages/Checkout/Checkout.module.scss
@@ -207,6 +207,7 @@
           gap: 0.75rem;
           cursor: pointer;
           transition: all 0.15s;
+          text-transform: uppercase;
 
           &:hover {
             background-color: var(--base-hover);
