--- a/src/pages/Success/Success.module.scss
+++ b/src/pages/Success/Success.module.scss
@@ -2,90 +2,117 @@
   display: flex;
   flex-direction: column;
   color: var(--base-title);
-  margin-top: 2rem;
+  width: 90vw;
+  align-items: center;
 
-  .header {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-
-    .title {
-      font-family: 'Baloo 2';
-      color: var(--yellow-dark);
-      font-weight: 800;
-      font-size: 2rem;
-      line-height: 1.3;
-    }
-
-    .subtitle {
-      font-size: 20px;
-      line-height: 1.3;
-    }
-
-    .headerImage {
-      width: 476px;
-      height: 360px;
-    }
-  }
-
-  main {
-    display: flex;
-    gap: 6rem;
-    align-items: center;
-    margin-top: 2.5rem;
-
-    .mainContentWrapper {
-      min-width: 32.875rem;
-      background: linear-gradient(102.89deg, #dbac2c 2.61%, #8047f8 98.76%);
-      border-radius: 6px 36px;
+  .wrapper {
+    max-width: 70rem;
+    .header {
       display: flex;
+      flex-direction: column;
+      width: 100%;
+      gap: 0.5rem;
 
-      .mainContent {
-        border-radius: 5px 35px;
-        background-color: var(--background);
-        width: 100%;
+      .title {
+        font-family: 'Baloo 2';
+        color: var(--yellow-dark);
+        font-weight: 800;
+        font-size: 2rem;
+        line-height: 1.3;
+      }
+
+      .subtitle {
+        font-size: 20px;
+        line-height: 1.3;
+      }
+
+      .headerImage {
+        width: 476px;
+        height: 360px;
+      }
+    }
+
+    main {
+      display: flex;
+      gap: 6rem;
+      align-items: center;
+      margin-top: 2.5rem;
+      flex-shrink: 1;
+
+      .mainContentWrapper {
+        max-width: 32.875rem;
+        min-width: 18rem;
+        background: linear-gradient(102.89deg, #dbac2c 2.61%, #8047f8 98.76%);
+        border-radius: 6px 36px;
         display: flex;
-        flex-direction: column;
-        gap: 2rem;
-        padding: 2.5rem;
-        margin: 1px;
 
-        .deliveryInfo {
+        .mainContent {
+          border-radius: 5px 35px;
+          background-color: var(--background);
+          width: 100%;
           display: flex;
-          align-items: center;
-          gap: 12px;
+          flex-direction: column;
+          gap: 2rem;
+          padding: 2.5rem;
+          margin: 1px;
 
-          p {
-            color: var(--base-text);
-          }
-
-          .iconContainer {
-            border-radius: 100%;
-            height: 32px;
-            width: 32px;
+          .deliveryInfo {
             display: flex;
             align-items: center;
-            justify-content: center;
-            color: var(--white);
+            gap: 12px;
 
-            &.iconMapPin {
-              background-color: var(--purple-dark);
+            p {
+              color: var(--base-text);
             }
 
-            &.iconTimer {
-              background-color: var(--yellow);
-            }
+            .iconContainer {
+              border-radius: 100%;
+              height: 2rem;
+              width: 2rem;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              color: var(--white);
 
-            &.iconMoney {
-              background-color: var(--yellow-dark);
+              &.iconMapPin {
+                background-color: var(--purple-dark);
+              }
+
+              &.iconTimer {
+                background-color: var(--yellow);
+              }
+
+              &.iconMoney {
+                background-color: var(--yellow-dark);
+              }
             }
           }
         }
       }
+
+      .mainImage {
+        width: 100%;
+        max-width: fit-content;
+      }
+    }
+  }
+
+  @media (max-width: 920px) {
+    .header {
+      align-items: center;
+      text-align: center;
     }
 
-    .mainImage {
-      width: fit-content;
+    .wrapper main {
+      flex-direction: column;
+      gap: 2rem;
+    }
+  }
+
+  @media (max-width: 520px) {
+    .wrapper main {
+      flex-direction: column;
+      gap: 2rem;
     }
   }
 }
